
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PAGE_EXECUTE ;
 int PAGE_EXECUTE_READ ;
 int PAGE_EXECUTE_READWRITE ;
 int PAGE_NOACCESS ;
 int PAGE_READONLY ;
 int PAGE_READWRITE ;
 int R_PERM_R ;
 int R_PERM_RW ;
 int R_PERM_RWX ;
 int R_PERM_W ;
 int R_PERM_X ;

__attribute__((used)) static int __io_perms_to_prot(int io_perms) {
 int prot_perms;

 if ((io_perms & R_PERM_RWX) == R_PERM_RWX) {
  prot_perms = PAGE_EXECUTE_READWRITE;
 } else if ((io_perms & (R_PERM_W | R_PERM_X)) == (R_PERM_W | R_PERM_X)) {
  prot_perms = PAGE_EXECUTE_READWRITE;
 } else if ((io_perms & (R_PERM_R | R_PERM_X)) == (R_PERM_R | R_PERM_X)) {
  prot_perms = PAGE_EXECUTE_READ;
 } else if ((io_perms & R_PERM_RW) == R_PERM_RW) {
  prot_perms = PAGE_READWRITE;
 } else if (io_perms & R_PERM_W) {
  prot_perms = PAGE_READWRITE;
 } else if (io_perms & R_PERM_X) {
  prot_perms = PAGE_EXECUTE;
 } else if (io_perms & R_PERM_R) {
  prot_perms = PAGE_READONLY;
 } else {
  prot_perms = PAGE_NOACCESS;
 }
 return prot_perms;
}
